--- a/stylezz.css
+++ b/stylezz.css
@@ -15,3 +15,10 @@ header {
     text-align: center;
     padding: 10px; 
 }
+.header a:hover {
+    background-color: #ddd;
+    color: #7B7263;
+  }
+  .header-right {
+    float: right;
+  }
